# elara-math

./: .gitignore  .gitmodules  ACKNOWLEDGEMENTS.md  Cargo.toml  README.md  TODO.md
examples/: arange.rs  autograd.rs  demo.rs  dot_prod.rs  iter.rs  matmul.rs  nn_full.rs  pow.rs  random.rs  relu.rs  tiny_nn.rs
src/: integrate.rs  lib.rs  nn.rs  prelude.rs
src/num/: mod.rs
src/tensor/: autograd.rs  mod.rs
src/tensor/array/: blas.rs  mod.rs  utils.rs
