[package]
name = "elara-math"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
description = "Rust-native tensor and math library"
repository = "https://github.com/elaraproject/elara-math"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elara_log = { version = "0.1.0", path = "src/elara-log" }
num-traits = "0.2.15"
uuid = { version = "1.3.3", features = ["v4"] }
impl_ops = "0.1.1"
