[package]
name = "elara-math"
version = "0.1.1"
edition = "2021"
license = "Unlicense"
description = "Rust-native tensor and math library"
repository = "https://github.com/elaraproject/elara-math"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elara_log = { version = "0.1.0", path = "src/elara-log" }
matrixmultiply = "0.3.7"
uuid = { version = "1.3.3", features = ["v4"] }
libblas = { git = "https://github.com/Schultzer/libblas.git" }
transpose = "0.2.2"
# ndarray = { version = "0.15.6", features = ["blas"] }
ndarray = { version = "0.15.6" }
