[package]
name = "elara-math"
version = "0.1.2"
edition = "2021"
license = "Unlicense"
description = "Rust-native tensor and math library"
repository = "https://github.com/elaraproject/elara-math"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elara-log-ng = { version = "0.1.2", path = "./src/elara-log-ng" }
uuid = { version = "1.3.3", features = ["v4"] }
# ndarray = { version = "0.15.6", features = ["blas"] }
ndarray = { version = "0.15.6" }
ndarray-rand = "0.14.0"
